--- a/.gitconfig
+++ b/.gitconfig
@@ -3,3 +3,5 @@
 	name = Jacob Tipp
 [alias]
 	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+[core]
+	pager = diff-so-fancy | less --tabs=4 -RFX
