added useful vim bindings and plugins

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,4 +1,7 @@
 {
+  "html.autoClosingTags": true,
+  "html.format.wrapAttributes": "force-expand-multiline",
+  "html.format.indentHandlebars": true,
   "suggest.enablePreview": true,
   "coc.preferences.formatOnSaveFiletypes": [
     "css",
