kotlin/java integration

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 #basic bindings
 set -g default-terminal "screen-256color"
 unbind C-b
-set -g prefix C-a	
+set -g prefix C-a
 set-option -g history-limit 50000
 bind C-a send-prefix
 
@@ -23,6 +23,7 @@ if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 
 #tmux plugins
+set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-logging'
 set -g @plugin 'jimeh/tmux-themepack'
